# ducksync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  commitcritic.yml
src/: config.rs  duckdns.rs  ipify.rs  lib.rs  main.rs
