[package]
name = "ducksync"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = "z"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5" , features = ["derive"] } 
directories = "6.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["full"] }
