[package]
name        = "ducksync"
version     = "0.1.0"
edition     = "2024"
description = "A Duck DNS sync daemon with REST and DBus API"
license     = "MIT"
homepage    = "https://github.com/juliankahlert/ducksync"
repository  = "https://github.com/juliankahlert/ducksync"
authors     = ["Julian Kahlert"]
readme      = "README.md"

[package.metadata.deb]
maintainer = "Julian Kahlert <julian.kahlert@protonmail.com>"
section    = "net"
priority   = "optional"
depends    = "$auto"
assets     = [
    ["target/release/ducksync", "/usr/bin/ducksync", "755"],
    ["README.md", "/usr/share/doc/ducksync/README.md", "644"],
    ["LICENSE", "/usr/share/doc/ducksync/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "A Duck DNS sync daemon with REST and DBus API"
license = "MIT"
release = "1"

[[package.metadata.generate-rpm.assets]]
source = "target/release/ducksync"
dest   = "/usr/bin/ducksync"
mode   = "755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest   = "/usr/share/doc/ducksync/README.md"
mode   = "644"
doc    = true

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest   = "/usr/share/doc/ducksync/LICENSE"
mode   = "644"
doc    = true

[profile.release]
lto = true
strip = true
opt-level = "z"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5" , features = ["derive"] } 
directories = "6.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["full"] }
